k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mysafedraw.site
      - www.mysafedraw.site
      - jenkins.mysafedraw.site
    secretName: tls-secret
  rules:
  - host: mysafedraw.site
    http:
      paths:
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
  - host: jenkins.mysafedraw.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8787
